                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 31-03-2005 added: Initial support for SMB share username/password prompting if it's not set in XBoxMediaCenter.xml.  Thanks to BillJam for the patch.
  - 30-03-2005 fixed: Webserver password reset to No Pass did not reset correctly.
  - 30-03-2005 fixed: Srt subtitles out of sync with framerateadjuster enabled after last fix
  - 30-03-2005 changed: Stacking now uses Regular Expressions for finding where to stack.  They're specified in XBoxMediaCenter.xml.  Most people probably don't need to change the defaults.
  - 30-03-2005 changed: Sorting in Video views is a little more intelligent.  Sorts numbers separately (eg Disk 1... Disk 10) are sorted correctly).
  - 30-03-2005 fixed: Correctly retrieve movie title + movie writing credits from IMDb.
  - 29-03-2005 fixed: duplicate album entries in My Music Nav window for Various Artists albums when no artist filter is applied
  - 29-03-2005 fixed: Videodatabase wasn't retrieving boolean values from database correctly (ex. FrameRateAdjustment wherent being restored)
  - 29-03-2005 fixed: Incorrect options given to mplayer when framerateadjustement was enabled. Could have been cause of problems with autosync and subtitles.
  - 28-03-2005 updated: Chinese (Traditional) language file (Thnx to woozc)
  - 28-03-2004 updated: Polish language file (Thnx to napek)
  - 28-03-2005 added: user-agent to mplayer.conf, "MPEG" needed for old SHOUTcast-servers. Please leave intact.
  - 27-03-2005 changed: Made sure triggers submit a keypress wen released. Makes sure ff/rw resumes properly on trigger release